<resources>
    <string name="app_name">AudioCaptures </string>
    <string name="app_title">TBD</string>
    <string name="menu_title">Main_Menu</string>
    <string name="library_title">Library</string>

    <!-- Menu strings -->
    <string name="action_settings">Action_Settings</string>
    <string name="action_search">Search</string>
    <string name="action_user">User</string>
    <string name="bookmark">Bookmark</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <!-- used in fragemnt_record.xml -->
    <string name="fragment_record_title">Audio Recorder</string>
    <string name="fragment_record_contact_email">bioacousticsgamification@gmail.com</string>
    <string name="fragment_record_REC">REC</string>
    <string name="fragment_record_STOP">STOP</string>
    <string name="fragment_record_PLAY">PLAY</string>
    <string name="fragment_record_SAVE">SAVE</string>

    <string name="storage_directory">FieldRecordings</string>
    <string name="test_file_folder">TestFiles</string>
    <string name="test_file_name">TestAudioFile</string>
    <string name="pcm_file_format">.pcm</string>
    <string name="wav_file_format">.wav</string>

    <!-- debug strings -->
    <string name="tab_1_xml">Tab_1_XML</string>
    <string name="tab_2_xml">Tab_2_XML</string>
    <string name="tab_3_xml">Tab_3_XML</string>
</resources>
